# WVU-IENG-331-M2-18

./: DESIGN.md  GRADE.md  README.md  pyproject.toml
output/: chart.html  detail.parquet  summary.csv
sql/: abc_classification.sql
src/wvu_ieng_331_m2_18/: __init__.py  pipeline.py  validation.py
src/wvu_ieng_331_m2_18.egg-info/: SOURCES.txt  entry_points.txt
